@@ -1,5 +1,6 @@
 package com.getsentry.raven.connection;
 
+import com.getsentry.raven.DefaultRavenFactory;
 import com.getsentry.raven.environment.RavenEnvironment;
 import com.getsentry.raven.event.Event;
 import com.getsentry.raven.marshaller.Marshaller;
@@ -16,7 +17,6 @@ import java.net.Proxy;
 import java.net.URI;
 import java.net.URL;
 import java.nio.charset.Charset;
-import java.util.concurrent.TimeUnit;
 
 /**
  * Basic connection to a Sentry server, using HTTP and HTTPS.
@@ -34,10 +34,6 @@ public class HttpConnection extends AbstractConnection {
      * HTTP Header for the authentication to Sentry.
      */
     private static final String SENTRY_AUTH = "X-Sentry-Auth";
-    /**
-     * Default timeout of an HTTP connection to Sentry.
-     */
-    private static final int DEFAULT_TIMEOUT = (int) TimeUnit.SECONDS.toMillis(1);
     /**
      * HostnameVerifier allowing wildcard certificates to work without adding them to the truststore.
      */
@@ -62,7 +58,7 @@ public class HttpConnection extends AbstractConnection {
     /**
      * Timeout of an HTTP connection to Sentry.
      */
-    private int timeout = DEFAULT_TIMEOUT;
+    private int timeout = DefaultRavenFactory.TIMEOUT_DEFAULT;
     /**
      * Setting allowing to bypass the security system which requires wildcard certificates
      * to be added to the truststore.
